fix overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   display: block;
+  overflow: hidden;
   width: 100%;
   height: 100%;
 }
